Changed index.html color

--- a/react/index.html
+++ b/react/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/png" href="./src/assets/cv_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Computer Vision Club at ASU</title>
+    <style>
+      body {
+        background-color: rgba(198, 235, 255, 1);
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
